<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/header"
        android:layout_height="?attr/actionBarSize"
        android:background="#db241e">
        <ImageView
            android:id="@+id/back_image"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_white"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textTitle"
            android:text="@string/code"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/share_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_share_white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/share_image"
            android:layout_marginTop="15dp"
            />


    </RelativeLayout>




    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageQR"
        android:layout_below="@+id/header"
        android:layout_marginTop="40dp"
        android:src="@drawable/qr"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageQR"
        android:id="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:text="@string/introducername"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:id="@+id/introducerName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="25dp"
        android:text="MICHAEL WONG"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introducerName"
        android:id="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:text="@string/introducercontact"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:id="@+id/introducerContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="25dp"
        android:text="9952698250"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="Display this QR code to enjoy 5% discount off your total bill. Terms &amp; Conditions Apply"
        android:textColor="#ffffff"/>

</RelativeLayout>
