<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:background="@color/colorPrimaryLight"-->
<include
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    layout="@layout/header3"/>
    <ProgressBar
        android:id="@+id/pb_subcot"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:indeterminateDrawable="@android:drawable/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/darktextviewstyle"
        android:text="Sign up with your mobile number"/>
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/First_Name"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/darktextviewstyle2"
        android:text="We will send you a text verification"/>-->
    <EditText
        android:id="@+id/lastName"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:hint="@string/Last_Name"
    android:paddingLeft="10dp"
    android:background="@drawable/rectangle_edit_text"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
    />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="Email"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        />
    <!--<EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="Address"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        />-->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        />
    <!--<EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="Confirm Password"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        />-->
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/hidePass"/>
    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        style="@style/darktextviewstyle2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/yellow_button"
        android:text="@string/CreateanAccount"/>
    <TextView
        android:id="@+id/already_user1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Already have an Account?"
        android:textColor="@android:color/holo_blue_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Message and data rates may apply."
        android:textColor="@android:color/black"/>
</LinearLayout>
